<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rootLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layoutDescription="@xml/activity_welcome_scene"
    tools:context=".WelcomeActivity">

    <ImageView
        android:id="@+id/imgBlur"
        android:layout_width="1500dp"
        android:layout_height="1500dp"
        android:src="@drawable/bg_signin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/welcome"
        style="@style/WelcomeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="232dp"
        android:text="@string/welcome"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="500dp"
        android:layout_height="500dp"
        android:scaleType="center"
        android:src="@drawable/logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.497" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/TODO"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/logo"
        app:layout_constraintBottom_toBottomOf="@id/logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <Button
            android:id="@+id/Signin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/BtnStyle"
            android:text="@string/sign_in"
            android:background="@color/transparent"
            android:textColor="@color/white"
            android:layout_marginEnd="@dimen/size_x6"
            app:layout_constraintTop_toTopOf="@id/Signup"
            app:layout_constraintBottom_toBottomOf="@id/Signup"
            app:layout_constraintEnd_toStartOf="@id/Signup"/>

        <Button
            android:id="@+id/Signup"
            style="@style/BtnStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:background="@drawable/bg_btn"
            android:layout_marginStart="@dimen/size_x6"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/skip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/skip"
        android:textSize="@dimen/size_x4"
        android:textColor="@color/white"
        android:layout_marginTop="@dimen/size_x9"
        android:layout_marginEnd="@dimen/size_x6"
        app:layout_constraintTop_toBottomOf="@id/TODO"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.motion.widget.MotionLayout>