<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity">

    <ImageView
        android:id="@+id/imgBlur"
        android:layout_width="1500dp"
        android:layout_height="1500dp"
        android:src="@drawable/bg_signin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_signup"
        style="@style/WelcomeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="232dp"
        android:text="@string/sign_up"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:padding="@dimen/size_x3"
        android:hint="@string/username_or_email"
        android:textColorHint="@color/white"
        android:layout_marginTop="@dimen/size_x4"
        android:layout_marginStart="@dimen/size_x4"
        android:layout_marginEnd="@dimen/size_x4"
        android:background="@drawable/bg_edtext"
        app:layout_constraintTop_toBottomOf="@id/tv_signup"/>

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:padding="@dimen/size_x3"
        android:hint="@string/pswrd"
        android:textColorHint="@color/white"
        android:layout_marginTop="@dimen/size_x4"
        android:layout_marginStart="@dimen/size_x4"
        android:layout_marginEnd="@dimen/size_x4"
        android:background="@drawable/bg_edtext"
        app:layout_constraintTop_toBottomOf="@id/username"/>

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:padding="@dimen/size_x3"
        android:hint="@string/pswrd"
        android:textColorHint="@color/white"
        android:layout_marginTop="@dimen/size_x4"
        android:layout_marginStart="@dimen/size_x4"
        android:layout_marginEnd="@dimen/size_x4"
        android:background="@drawable/bg_edtext"
        app:layout_constraintTop_toBottomOf="@id/email"/>

    <EditText
        android:id="@+id/cfpassword"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:padding="@dimen/size_x3"
        android:hint="@string/pswrd"
        android:textColorHint="@color/white"
        android:layout_marginTop="@dimen/size_x4"
        android:layout_marginStart="@dimen/size_x4"
        android:layout_marginEnd="@dimen/size_x4"
        android:background="@drawable/bg_edtext"
        app:layout_constraintTop_toBottomOf="@id/password"/>

    <TextView
        android:id="@+id/or"
        style="@style/WelcomeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size_x6"
        android:text="Or"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cfpassword" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/gr_mxh"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size_x6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/or">

        <ImageView
            android:id="@+id/ic_google"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/google"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <ImageView
            android:id="@+id/ic_facebook"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/facebook"
            android:layout_marginStart="@dimen/size_x7"
            app:layout_constraintStart_toEndOf="@id/ic_google"
            app:layout_constraintTop_toTopOf="parent"/>

        <ImageView
            android:id="@+id/ic_github"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/github"
            android:layout_marginStart="@dimen/size_x7"
            app:layout_constraintStart_toEndOf="@id/ic_facebook"
            app:layout_constraintTop_toTopOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/Signin"
        style="@style/BtnStyle"
        android:layout_width="wrap_content"
        android:layout_height="37dp"
        android:layout_marginTop="@dimen/size_x6"
        android:background="@drawable/bg_btn"
        android:text="@string/sign_up"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/gr_mxh" />

</androidx.constraintlayout.widget.ConstraintLayout>